y.output
Terminals unused in grammar

    HASH
    TYPEDEF
    UNION
    STRUCT


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHARACTER_CONSTANT
    5                   | STRING_LITERAL
    6                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    7 postfix_expression: primary_expression
    8                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
    9                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression IMPLIES IDENTIFIER
   12                   | postfix_expression UNARY_INCREMENT
   13                   | postfix_expression UNARY_DECREMENT
   14                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   15                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   16 argument_expression_list_opt: argument_expression_list
   17                             | ε

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | UNARY_INCREMENT unary_expression
   22                 | UNARY_DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   26 unary_operator: BITWISE_AND
   27               | MUL
   28               | PLUS
   29               | MINUS
   30               | COMPLEMENT
   31               | NOT

   32 cast_expression: unary_expression
   33                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression MUL cast_expression
   36                          | multiplicative_expression DIV cast_expression
   37                          | multiplicative_expression MOD cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression BITWISE_LEFT additive_expression
   43                 | shift_expression BITWISE_RIGHT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_EQUAL shift_expression
   48                      | relational_expression GREATER_EQUAL shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUAL relational_expression
   51                    | equality_expression NOT_EQUAL relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BITWISE_AND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression XOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression N LOGICAL_AND M inclusive_OR_expression

   60 logical_OR_expression: logical_AND_expression
   61                      | logical_OR_expression N LOGICAL_OR M logical_AND_expression

   62 conditional_expression: logical_OR_expression
   63                       | logical_OR_expression N QUES_MARK M expression N COLON M conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: ASSIGN
   67                    | MUL_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN
   70                    | PLUS_ASSIGN
   71                    | MINUS_ASSIGN
   72                    | BITWISE_LEFT_ASSIGN
   73                    | BITWISE_RIGHT_ASSIGN
   74                    | BITWISE_AND_ASSIGN
   75                    | XOR_ASSIGN
   76                    | BITWISE_OR_ASSIGN

   77 expression: assignment_expression
   78           | expression COMMA assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   81 init_declarator_list_opt: init_declarator_list
   82                         | ε

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   84                       | type_specifier declaration_specifiers_opt
   85                       | type_qualifier declaration_specifiers_opt
   86                       | function_specifier declaration_specifiers_opt

   87 declaration_specifiers_opt: declaration_specifiers
   88                           | ε

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list COMMA init_declarator

   91 init_declarator: declarator
   92                | declarator ASSIGN initializer

   93 storage_class_specifier: EXTERN
   94                        | STATIC

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE

  102 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  103                         | type_qualifier specifier_qualifier_list_opt

  104 specifier_qualifier_list_opt: specifier_qualifier_list
  105                             | ε

  106 type_qualifier: CONST
  107               | RESTRICT
  108               | VOLATILE

  109 function_specifier: INLINE

  110 declarator: pointer direct_declarator
  111           | direct_declarator

  112 direct_declarator: IDENTIFIER
  113                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  114                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  115                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  116                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  117                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  118                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  119                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  120                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  121                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  122                  | direct_declarator SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  123                  | direct_declarator ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  124                  | direct_declarator ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE
  125                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE

  126 changetable: ε

  127 pointer: MUL type_qualifier_list_opt
  128        | MUL type_qualifier_list_opt pointer

  129 type_qualifier_list: type_qualifier
  130                    | type_qualifier_list type_qualifier

  131 type_qualifier_list_opt: type_qualifier_list
  132                        | ε

  133 parameter_type_list: parameter_list
  134                    | parameter_list COMMA DOTS

  135 parameter_list: parameter_declaration
  136               | parameter_list COMMA parameter_declaration

  137 parameter_declaration: declaration_specifiers declarator
  138                      | declaration_specifiers

  139 identifier_list: IDENTIFIER
  140                | identifier_list COMMA IDENTIFIER

  141 type_name: specifier_qualifier_list

  142 initializer: assignment_expression
  143            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  144            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  145 initializer_list: designation_opt initializer
  146                 | initializer_list COMMA designation_opt initializer

  147 designation: designator_list ASSIGN

  148 designation_opt: designation
  149                | ε

  150 designator_list: designator
  151                | designator_list designator

  152 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  153           | DOT IDENTIFIER

  154 statement: labeled_statement
  155          | compound_statement
  156          | expression_statement
  157          | selection_statement
  158          | iteration_statement
  159          | jump_statement

  160 labeled_statement: IDENTIFIER COLON statement
  161                  | CASE constant_expression COLON statement
  162                  | DEFAULT COLON statement

  163 compound_statement: CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  164 block_item_list: block_item
  165                | block_item_list M block_item

  166 block_item: declaration
  167           | statement

  168 block_item_list_opt: block_item_list
  169                    | ε

  170 expression_statement: expression_opt SEMICOLON

  171 expression_opt: expression
  172               | ε

  173 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
  174                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
  175                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  176 iteration_statement: WHILE M ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE M statement
  177                    | DO M statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  178                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement ROUND_BRACKET_CLOSE M statement
  179                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M statement

  180 jump_statement: GOTO IDENTIFIER SEMICOLON
  181               | CONTINUE SEMICOLON
  182               | BREAK SEMICOLON
  183               | RETURN expression SEMICOLON
  184               | RETURN SEMICOLON

  185 translation_unit: external_declaration
  186                 | translation_unit external_declaration

  187 external_declaration: function_definition
  188                     | declaration

  189 function_definition: declaration_specifiers declarator declaration_list_opt changetable compound_statement

  190 declaration_list: declaration
  191                 | declaration_list declaration

  192 declaration_list_opt: declaration_list
  193                     | ε

  194 M: ε

  195 N: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <sym_ptr> (258) 1 10 11 112 139 140 153 160 180
    INTEGER_CONSTANT <int_value> (259) 2
    FLOAT_CONSTANT <char_value> (260) 3
    CHARACTER_CONSTANT <char_value> (261) 4
    STRING_LITERAL <char_value> (262) 5
    ROUND_BRACKET_OPEN (263) 6 9 14 15 25 33 113 123 124 125 173 174 175 176 177 178 179
    ROUND_BRACKET_CLOSE (264) 6 9 14 15 25 33 113 123 124 125 173 174 175 176 177 178 179
    SQUARE_BRACKET_OPEN (265) 8 114 115 116 117 118 119 120 121 122 152
    SQUARE_BRACKET_CLOSE (266) 8 114 115 116 117 118 119 120 121 122 152
    CURLY_BRACKET_OPEN (267) 14 15 143 144 163
    CURLY_BRACKET_CLOSE (268) 14 15 143 144 163
    UNARY_INCREMENT (269) 12 21
    UNARY_DECREMENT (270) 13 22
    NOT (271) 31
    MUL (272) 27 35 121 122 127 128
    DIV (273) 36
    MOD (274) 37
    PLUS (275) 28 39
    MINUS (276) 29 40
    COMPLEMENT (277) 30
    XOR (278) 55
    DOT (279) 10 153
    DOTS (280) 134
    COMMA (281) 15 19 78 90 134 136 140 144 146
    QUES_MARK (282) 63
    COLON (283) 63 160 161 162
    SEMICOLON (284) 80 170 177 180 181 182 183 184
    IMPLIES (285) 11
    HASH (286)
    BITWISE_LEFT (287) 42
    BITWISE_RIGHT (288) 43
    BITWISE_AND (289) 26 53
    BITWISE_OR (290) 57
    LOGICAL_AND (291) 59
    LOGICAL_OR (292) 61
    LESS_THAN (293) 45
    GREATER_THAN (294) 46
    LESS_EQUAL (295) 47
    GREATER_EQUAL (296) 48
    EQUAL (297) 50
    NOT_EQUAL (298) 51
    ASSIGN (299) 66 92 147
    MUL_ASSIGN (300) 67
    DIV_ASSIGN (301) 68
    MOD_ASSIGN (302) 69
    PLUS_ASSIGN (303) 70
    MINUS_ASSIGN (304) 71
    BITWISE_LEFT_ASSIGN (305) 72
    BITWISE_RIGHT_ASSIGN (306) 73
    BITWISE_AND_ASSIGN (307) 74
    XOR_ASSIGN (308) 75
    BITWISE_OR_ASSIGN (309) 76
    EXTERN (310) 93
    STATIC (311) 94 118 119 120
    VOID (312) 95
    CHAR (313) 96
    SHORT (314) 97
    INT (315) 98
    LONG (316) 99
    FLOAT (317) 100
    DOUBLE (318) 101
    CONST (319) 106
    RESTRICT (320) 107
    VOLATILE (321) 108
    INLINE (322) 109
    SIZEOF (323) 24 25
    TYPEDEF (324)
    UNION (325)
    STRUCT (326)
    CASE (327) 161
    DEFAULT (328) 162
    IF (329) 173 174
    ELSE (330) 174
    SWITCH (331) 175
    WHILE (332) 176 177
    DO (333) 177
    FOR (334) 178 179
    GOTO (335) 180
    CONTINUE (336) 181
    BREAK (337) 182
    RETURN (338) 183 184
    "LOWER_THAN_ELSE" (339)


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    primary_expression <expr> (86)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression <Arr> (87)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument_expression_list_opt <num_params> (88)
        on left: 16 17
        on right: 9
    argument_expression_list <num_params> (89)
        on left: 18 19
        on right: 16 19
    unary_expression <Arr> (90)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 65
    unary_operator <unaryOp> (91)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression <Arr> (92)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression <expr> (93)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <expr> (94)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <expr> (95)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression <expr> (96)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression <expr> (97)
        on left: 49 50 51
        on right: 50 51 52 53
    AND_expression <expr> (98)
        on left: 52 53
        on right: 53 54 55
    exclusive_OR_expression <expr> (99)
        on left: 54 55
        on right: 55 56 57
    inclusive_OR_expression <expr> (100)
        on left: 56 57
        on right: 57 58 59
    logical_AND_expression <expr> (101)
        on left: 58 59
        on right: 59 60 61
    logical_OR_expression <expr> (102)
        on left: 60 61
        on right: 61 62 63
    conditional_expression <expr> (103)
        on left: 62 63
        on right: 63 64 79
    assignment_expression <expr> (104)
        on left: 64 65
        on right: 18 19 65 77 78 114 115 118 119 120 142
    assignment_operator (105)
        on left: 66 67 68 69 70 71 72 73 74 75 76
        on right: 65
    expression <expr> (106)
        on left: 77 78
        on right: 6 8 63 78 171 173 174 175 176 177 179 183
    constant_expression (107)
        on left: 79
        on right: 152 161
    declaration (108)
        on left: 80
        on right: 166 188 190 191
    init_declarator_list_opt (109)
        on left: 81 82
        on right: 80
    declaration_specifiers (110)
        on left: 83 84 85 86
        on right: 80 87 137 138 189
    declaration_specifiers_opt (111)
        on left: 87 88
        on right: 83 84 85 86
    init_declarator_list (112)
        on left: 89 90
        on right: 81 90
    init_declarator <sym_ptr> (113)
        on left: 91 92
        on right: 89 90
    storage_class_specifier (114)
        on left: 93 94
        on right: 83
    type_specifier (115)
        on left: 95 96 97 98 99 100 101
        on right: 84 102
    specifier_qualifier_list (116)
        on left: 102 103
        on right: 104 141
    specifier_qualifier_list_opt (117)
        on left: 104 105
        on right: 102 103
    type_qualifier (118)
        on left: 106 107 108
        on right: 85 103 129 130
    function_specifier (119)
        on left: 109
        on right: 86
    declarator <sym_ptr> (120)
        on left: 110 111
        on right: 91 92 113 137 189
    direct_declarator <sym_ptr> (121)
        on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125
        on right: 110 111 114 115 116 117 118 119 120 121 122 123 124 125
    changetable (122)
        on left: 126
        on right: 123 124 189
    pointer <sym_type> (123)
        on left: 127 128
        on right: 110 128
    type_qualifier_list (124)
        on left: 129 130
        on right: 114 116 118 120 121 130 131
    type_qualifier_list_opt (125)
        on left: 131 132
        on right: 127 128
    parameter_type_list (126)
        on left: 133 134
        on right: 123
    parameter_list (127)
        on left: 135 136
        on right: 133 134 136
    parameter_declaration (128)
        on left: 137 138
        on right: 135 136
    identifier_list (129)
        on left: 139 140
        on right: 125 140
    type_name (130)
        on left: 141
        on right: 14 15 25 33
    initializer <sym_ptr> (131)
        on left: 142 143 144
        on right: 92 145 146
    initializer_list (132)
        on left: 145 146
        on right: 14 15 143 144 146
    designation (133)
        on left: 147
        on right: 148
    designation_opt (134)
        on left: 148 149
        on right: 145 146
    designator_list (135)
        on left: 150 151
        on right: 147 151
    designator (136)
        on left: 152 153
        on right: 150 151
    statement <stat> (137)
        on left: 154 155 156 157 158 159
        on right: 160 161 162 167 173 174 175 176 177 178 179
    labeled_statement <stat> (138)
        on left: 160 161 162
        on right: 154
    compound_statement <stat> (139)
        on left: 163
        on right: 155 189
    block_item_list <stat> (140)
        on left: 164 165
        on right: 165 168
    block_item <stat> (141)
        on left: 166 167
        on right: 164 165
    block_item_list_opt <stat> (142)
        on left: 168 169
        on right: 163
    expression_statement <expr> (143)
        on left: 170
        on right: 156 178 179
    expression_opt <expr> (144)
        on left: 171 172
        on right: 170
    selection_statement <stat> (145)
        on left: 173 174 175
        on right: 157
    iteration_statement <stat> (146)
        on left: 176 177 178 179
        on right: 158
    jump_statement <stat> (147)
        on left: 180 181 182 183 184
        on right: 159
    translation_unit (148)
        on left: 185 186
        on right: 0 186
    external_declaration (149)
        on left: 187 188
        on right: 185 186
    function_definition (150)
        on left: 189
        on right: 187
    declaration_list (151)
        on left: 190 191
        on right: 191 192
    declaration_list_opt (152)
        on left: 192 193
        on right: 189
    M <instr_number> (153)
        on left: 194
        on right: 59 61 63 165 173 174 176 177 178 179
    N <stat> (154)
        on left: 195
        on right: 59 61 63 173 174 179


State 0

    0 $accept: • translation_unit $end

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22


State 1

   93 storage_class_specifier: EXTERN •

    $default  reduce using rule 93 (storage_class_specifier)


State 2

   94 storage_class_specifier: STATIC •

    $default  reduce using rule 94 (storage_class_specifier)


State 3

   95 type_specifier: VOID •

    $default  reduce using rule 95 (type_specifier)


State 4

   96 type_specifier: CHAR •

    $default  reduce using rule 96 (type_specifier)


State 5

   97 type_specifier: SHORT •

    $default  reduce using rule 97 (type_specifier)


State 6

   98 type_specifier: INT •

    $default  reduce using rule 98 (type_specifier)


State 7

   99 type_specifier: LONG •

    $default  reduce using rule 99 (type_specifier)


State 8

  100 type_specifier: FLOAT •

    $default  reduce using rule 100 (type_specifier)


State 9

  101 type_specifier: DOUBLE •

    $default  reduce using rule 101 (type_specifier)


State 10

  106 type_qualifier: CONST •

    $default  reduce using rule 106 (type_qualifier)


State 11

  107 type_qualifier: RESTRICT •

    $default  reduce using rule 107 (type_qualifier)


State 12

  108 type_qualifier: VOLATILE •

    $default  reduce using rule 108 (type_qualifier)


State 13

  109 function_specifier: INLINE •

    $default  reduce using rule 109 (function_specifier)


State 14

  188 external_declaration: declaration •

    $default  reduce using rule 188 (external_declaration)


State 15

   80 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
  189 function_definition: declaration_specifiers • declarator declaration_list_opt changetable compound_statement

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24
    MUL                 shift, and go to state 25

    $default  reduce using rule 82 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 26
    init_declarator_list      go to state 27
    init_declarator           go to state 28
    declarator                go to state 29
    direct_declarator         go to state 30
    pointer                   go to state 31


State 16

   83 declaration_specifiers: storage_class_specifier • declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 33
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 17

   84 declaration_specifiers: type_specifier • declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 34
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 18

   85 declaration_specifiers: type_qualifier • declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 35
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 19

   86 declaration_specifiers: function_specifier • declaration_specifiers_opt

    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 32
    declaration_specifiers_opt  go to state 36
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 20

    0 $accept: translation_unit • $end
  186 translation_unit: translation_unit • external_declaration

    $end      shift, and go to state 37
    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    external_declaration     go to state 38
    function_definition      go to state 22


State 21

  185 translation_unit: external_declaration •

    $default  reduce using rule 185 (translation_unit)


State 22

  187 external_declaration: function_definition •

    $default  reduce using rule 187 (external_declaration)


State 23

  112 direct_declarator: IDENTIFIER •

    $default  reduce using rule 112 (direct_declarator)


State 24

  113 direct_declarator: ROUND_BRACKET_OPEN • declarator ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24
    MUL                 shift, and go to state 25

    declarator         go to state 39
    direct_declarator  go to state 30
    pointer            go to state 31


State 25

  127 pointer: MUL • type_qualifier_list_opt
  128        | MUL • type_qualifier_list_opt pointer

    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 132 (type_qualifier_list_opt)

    type_qualifier           go to state 40
    type_qualifier_list      go to state 41
    type_qualifier_list_opt  go to state 42


State 26

   80 declaration: declaration_specifiers init_declarator_list_opt • SEMICOLON

    SEMICOLON  shift, and go to state 43


State 27

   81 init_declarator_list_opt: init_declarator_list •
   90 init_declarator_list: init_declarator_list • COMMA init_declarator

    COMMA  shift, and go to state 44

    $default  reduce using rule 81 (init_declarator_list_opt)


State 28

   89 init_declarator_list: init_declarator •

    $default  reduce using rule 89 (init_declarator_list)


State 29

   91 init_declarator: declarator •
   92                | declarator • ASSIGN initializer
  189 function_definition: declaration_specifiers declarator • declaration_list_opt changetable compound_statement

    ASSIGN    shift, and go to state 45
    EXTERN    shift, and go to state 1
    STATIC    shift, and go to state 2
    VOID      shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    CURLY_BRACKET_OPEN  reduce using rule 193 (declaration_list_opt)
    $default            reduce using rule 91 (init_declarator)

    declaration              go to state 46
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    declaration_list         go to state 48
    declaration_list_opt     go to state 49


State 30

  111 declarator: direct_declarator •
  114 direct_declarator: direct_declarator • SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  115                  | direct_declarator • SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  116                  | direct_declarator • SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  117                  | direct_declarator • SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  118                  | direct_declarator • SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  119                  | direct_declarator • SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  120                  | direct_declarator • SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  121                  | direct_declarator • SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  122                  | direct_declarator • SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  123                  | direct_declarator • ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  124                  | direct_declarator • ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE
  125                  | direct_declarator • ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN   shift, and go to state 50
    SQUARE_BRACKET_OPEN  shift, and go to state 51

    $default  reduce using rule 111 (declarator)


State 31

  110 declarator: pointer • direct_declarator

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24

    direct_declarator  go to state 52


State 32

   87 declaration_specifiers_opt: declaration_specifiers •

    $default  reduce using rule 87 (declaration_specifiers_opt)


State 33

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt •

    $default  reduce using rule 83 (declaration_specifiers)


State 34

   84 declaration_specifiers: type_specifier declaration_specifiers_opt •

    $default  reduce using rule 84 (declaration_specifiers)


State 35

   85 declaration_specifiers: type_qualifier declaration_specifiers_opt •

    $default  reduce using rule 85 (declaration_specifiers)


State 36

   86 declaration_specifiers: function_specifier declaration_specifiers_opt •

    $default  reduce using rule 86 (declaration_specifiers)


State 37

    0 $accept: translation_unit $end •

    $default  accept


State 38

  186 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 186 (translation_unit)


State 39

  113 direct_declarator: ROUND_BRACKET_OPEN declarator • ROUND_BRACKET_CLOSE

    ROUND_BRACKET_CLOSE  shift, and go to state 53


State 40

  129 type_qualifier_list: type_qualifier •

    $default  reduce using rule 129 (type_qualifier_list)


State 41

  130 type_qualifier_list: type_qualifier_list • type_qualifier
  131 type_qualifier_list_opt: type_qualifier_list •

    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 131 (type_qualifier_list_opt)

    type_qualifier  go to state 54


State 42

  127 pointer: MUL type_qualifier_list_opt •
  128        | MUL type_qualifier_list_opt • pointer

    MUL  shift, and go to state 25

    $default  reduce using rule 127 (pointer)

    pointer  go to state 55


State 43

   80 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON •

    $default  reduce using rule 80 (declaration)


State 44

   90 init_declarator_list: init_declarator_list COMMA • init_declarator

    IDENTIFIER          shift, and go to state 23
    ROUND_BRACKET_OPEN  shift, and go to state 24
    MUL                 shift, and go to state 25

    init_declarator    go to state 56
    declarator         go to state 57
    direct_declarator  go to state 30
    pointer            go to state 31


State 45

   92 init_declarator: declarator ASSIGN • initializer

    IDENTIFIER          shift, and go to state 58
    INTEGER_CONSTANT    shift, and go to state 59
    FLOAT_CONSTANT      shift, and go to state 60
    CHARACTER_CONSTANT  shift, and go to state 61
    STRING_LITERAL      shift, and go to state 62
    ROUND_BRACKET_OPEN  shift, and go to state 63
    CURLY_BRACKET_OPEN  shift, and go to state 64
    UNARY_INCREMENT     shift, and go to state 65
    UNARY_DECREMENT     shift, and go to state 66
    NOT                 shift, and go to state 67
    MUL                 shift, and go to state 68
    PLUS                shift, and go to state 69
    MINUS               shift, and go to state 70
    COMPLEMENT          shift, and go to state 71
    BITWISE_AND         shift, and go to state 72
    SIZEOF              shift, and go to state 73
